BusOne/src/objects/Call2_Sample_vod__c.object
<CustomObject>
    <description>Samples and Promotional Items itemized on Call Reports</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the account for which the disbursement was performed.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Call2_Sample_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_vod__c</fullName>
        <description>Shows and stamps the disbursed amount for the product (quantity x value)</description>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apply_Limit_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field used in the application of Sample Limits against a Call Sample record. Should not be displayed in any page layouts.</description>
        <label>Apply_Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendee_Type_vod__c</fullName>
        <description>Type of attendee such as Group Account, Person Account or Contact.</description>
        <label>Attendee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group_Account_vod</fullName>
                </value>
                <value>
                    <fullName>Contact_vod</fullName>
                </value>
                <value>
                    <fullName>Person_Account_vod</fullName>
                </value>
                <value>
                    <fullName>User_vod</fullName>
                </value>
                <value>
                    <fullName>Event_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call2_Mobile_ID_vod__c</fullName>
        <description>Mobile ID of the parent Call object</description>
        <label>Call Mobile ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call2_vod__c</fullName>
        <description>Lookup to Call2. All call samples need to refer to a call.</description>
        <label>Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipName>Call2_Sample_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Call_Date_vod__c</fullName>
        <description>Date of the disbursement.</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cold_Chain_Status_vod__c</fullName>
        <description>The Cold Chain Status for the corresponding Sample line item. Only pertains to samples that have been designated as cold chain product via the Product Catalog.</description>
        <label>Cold Chain Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Range</fullName>
                </value>
                <value>
                    <fullName>Not In Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Text_vod__c</fullName>
        <description>Custom text captured for the corresponding product line item. Only pertains to product that have been flagged to allow capture of custom text via the Product Catalog.</description>
        <label>Custom Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Status_vod__c</fullName>
        <description>Contains a list of possible statuses for a Call Sample.</description>
        <label>Delivery Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In_Progress_vod</fullName>
                </value>
                <value>
                    <fullName>Shipped_vod</fullName>
                </value>
                <value>
                    <fullName>Delivered_vod</fullName>
                </value>
                <value>
                    <fullName>Cancel_Request_vod</fullName>
                </value>
                <value>
                    <fullName>Cancelled_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distributor_vod__c</fullName>
        <description>The Distributor field is used to indicate the name of the Company that will be distributing the BRC Sample Product Types to the requesting Physicians. The Distributor name is displayed on the Signature capture form for all BRC records.</description>
        <label>Distributor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>ID of object associated with the sample such as an account.</description>
        <label>Entity Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Parent_Call_vod__c</fullName>
        <description>Formula Field to determine if the Call Sample record is part of the Parent Call or of an Attendee Call record.  1 indicates that the record is associated with the Parent Call.  0 indicates that it is associated with an Attendee Call.</description>
        <formula>IF(LEN(Call2_vod__r.Parent_Call_vod__c )&gt;0, 0,1)</formula>
        <label>Is Parent Call?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Limit_Applied_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Sample Limits have been applied against a Call Sample to prevent duplicate transactions from being created against a Sample Limit for a single call.</description>
        <label>Limit Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lot_vod__c</fullName>
        <description>Sample lot number for a sample.</description>
        <label>Lot #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_vod__c</fullName>
        <description>Name of Manufacturer of the sampled product – stored at the time of sample capture.</description>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Value_vod__c</fullName>
        <description>Shows and stamps the value defined for the product at the date of the call</description>
        <label>Product Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the product catalog for the item disbursed.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipName>Call_Sample_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_vod__c</fullName>
        <description>The quantity of the items disbursed.</description>
        <label>Quantity</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tag_Alert_Number_vod__c</fullName>
        <description>The Tag Alert Number for the corresponding Sample line item. Only pertains to samples that have been designated as cold chain product via the Product Catalog.</description>
        <label>Tag Alert Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Call Sample</label>
    <nameField>
        <displayFormat>CS{000000000}</displayFormat>
        <label>Call Sample Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Samples</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>